fix POST API Server

--- a/client/src/styles/_base.scss
+++ b/client/src/styles/_base.scss
@@ -45,3 +45,13 @@ $color-btn: rgb(240, 238, 235);
 .w-full {
     width: 100%;
 }
+.w-150 {
+    width: 100%;
+}
+// Margin
+.mr-top-20 {
+    margin-top: 20px;
+}
+.mr-left-20 {
+    margin-left: 20px;
+}
