--- a/client/src/styles/_base.scss
+++ b/client/src/styles/_base.scss
@@ -52,6 +52,9 @@ $color-btn: rgb(240, 238, 235);
 .mr-top-20 {
     margin-top: 20px;
 }
+.mr-top-30 {
+    margin-top: 30px;
+}
 .mr-left-20 {
     margin-left: 20px;
 }
